tests/dev_server/errors/stories/js_importing_css_with_syntax_error/main.js
import "./main_syntax_error.css" with { type: "css" };
